{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 130,
  "lineage": "15b3f11e-a283-6713-52b4-6f5064da7182",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d1b2fa19c17c9f1",
            "arn": "arn:aws:ec2:us-east-1:588459062833:instance/i-0a6a87b49d2bad7b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6a87b49d2bad7b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a282d9b0a3bf5b0a",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-54-86-160-233.compute-1.amazonaws.com",
            "public_ip": "54.86.160.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03857a08a662850e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c7dc762e1e04f79",
            "tags": {
              "Attributes": "public",
              "BusinessUnit": "CTO",
              "Name": "example-dev-learning-terraform-public",
              "Namespace": "example",
              "Snapshot": "true",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "BusinessUnit": "CTO",
              "Name": "example-dev-learning-terraform-public",
              "Namespace": "example",
              "Snapshot": "true",
              "Stage": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adce5cb9dc00de4b"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzLinux",
            "module.my_vpc.aws_security_group.web_sg",
            "module.my_vpc.aws_subnet.example_public_subnet1",
            "module.my_vpc.aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588459062833:internet-gateway/igw-0e8c8152ad764bbd9",
            "id": "igw-0e8c8152ad764bbd9",
            "owner_id": "588459062833",
            "vpc_id": "vpc-091cc994c94f3c354"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588459062833:route-table/rtb-02bcdc25f7ef45adb",
            "id": "rtb-02bcdc25f7ef45adb",
            "owner_id": "588459062833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8c8152ad764bbd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091cc994c94f3c354"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.example_gw",
            "module.my_vpc.aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031293c3390f77ff1",
            "route_table_id": "rtb-02bcdc25f7ef45adb",
            "subnet_id": "subnet-01c7dc762e1e04f79"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.example_gw",
            "module.my_vpc.aws_route_table.example_public_route_table",
            "module.my_vpc.aws_subnet.example_public_subnet1",
            "module.my_vpc.aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588459062833:security-group/sg-0adce5cb9dc00de4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adce5cb9dc00de4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-publicsubnet-sg",
            "name_prefix": "",
            "owner_id": "588459062833",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091cc994c94f3c354"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588459062833:subnet/subnet-01c7dc762e1e04f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c7dc762e1e04f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "588459062833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091cc994c94f3c354"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588459062833:vpc/vpc-091cc994c94f3c354",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f856c8bd698d5ab3",
            "default_route_table_id": "rtb-073fc2f27cd2ecc18",
            "default_security_group_id": "sg-083ca76bc32ee2e90",
            "dhcp_options_id": "dopt-0acbd734fbc426c32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091cc994c94f3c354",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073fc2f27cd2ecc18",
            "owner_id": "588459062833",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    }
  ]
}